--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
   "buildCommand": "cd frontend && npm install --include=dev && npm run build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "cd frontend && npm install --include=dev",
-  "functions": {
-    "api/index.py": {
-      "runtime": "python3.11"
-    }
-  },
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index" }
-  ]
+  "installCommand": "cd frontend && npm install --include=dev"
 }
