--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "framework": "nextjs",
-  "installCommand": "npm install",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev"
+"buildCommand": "cd frontend && npm install --include=dev && npm run build",
+"installCommand": "cd frontend && npm install --include=dev"
 }
