--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "framework": "nextjs",
-"buildCommand": "cd frontend && npm install --include=dev && npm run build",
-"installCommand": "cd frontend && npm install --include=dev"
+  "installCommand": "npm install --include=dev && npm run build",
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev"
 }
