--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "nextjs",
   "installCommand": "npm install --include=dev && npm run build",
-  "buildCommand": "npm run build",
+  "buildCommand": "NEXT_DISABLE_ESLINT=1 next build",
   "devCommand": "npm run dev"
 }
